--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Imaginary_17"
   pronouns         : "he"# example: "she/her"  
   bio              : "个人介绍"
-  location         : "Xi'an, Shaan Xi, China"
+  location         : "Xi'an, Shaanxi, China"
   employer         : "Xidian University"
   uri              : # URL
   email            : "2942247417@qq.com" 
